Fix scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
   padding: 0;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #f4f7fb;
